[project]
name = "w209-assignment-10-altair"
version = "0.1.0"
description = ""
authors = [
    {name = "Kenneth Lin",email = "kenneth.alex.lin@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "streamlit (>=1.43.1,<2.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "numpy (>=2.2.3,<3.0.0)",
    "altair (>=5.5.0,<6.0.0)",
    "vegafusion[embed] (>=2.0.2,<3.0.0)",
    "vl-convert-python (>=1.7.0,<2.0.0)",
    "watchdog (>=6.0.0,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false